# pcmonitor

./: Dockerfile  README.md  pyproject.toml
mypcmonitor/: main.py
mypcmonitor/collectors/: __init__.py  base.py
mypcmonitor/core/: collector.py  cpu.py  memory.py  network.py  storage.py
mypcmonitor/exporter/: __init__.py  server.py
mypcmonitor/exporter/collectors/: __init__.py  cpu.py  memory.py  network.py  storage.py
mypcmonitor/local/: __init__.py  cpu.py  main.py  memory.py  storage.py
mypcmonitor/master/: server.py
mypcmonitor/master/collectors/: __init__.py  base.py
mypcmonitor/models/: __init__.py  master.py
mypcmonitor/ui/: __init__.py  main.py  main.tcss  master_client.py
mypcmonitor/ui/views/: cpu.py  memory.py  network.py  storage.py
pcmonitor/: utils.py
pcmonitor/core/: cpu.py  memory.py  network.py  storage.py
pcmonitor/local/: __init__.py  cpu.py  main.py  main.tcss
pcmonitor/models/: metrics.py
sentinalmon/: utils.py
sentinalmon/exporter/: server.py
sentinalmon/exporter/collectors/: cpu.py
sentinalmon/master/: server.py
sentinalmon/ui/views/: network.py  storage.py
tests/: test_collectors.py  test_cpu.py  test_memory.py  test_network.py  test_storage.py
